# hostal-oleo

./: .gitignore  README.md  pyproject.toml
notebook/: notebook.ipynb
src/: data_processing.py
src/config/: config.py
src/model_1day_before/: inference.py  train.py
src/utils/: collect_data.py  collect_diary_reservations.py  create_days_df.py
