[tool.poetry]
name = "hostal-oleo"
version = "0.1.0"
description = ""
authors = ["Raul H <raulherreromenocal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
pydantic-settings = "^2.4.0"
mlflow = "^2.16.0"
numpy = "^2.1.1"
xgboost = "^2.1.1"



[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
